--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
-/Head.class
-/Priority.class
-/Directions.class
-/Direction.class
-/HeadComponent.class
+##############################
+## Java
+##############################
+.mtj.tmp/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
